--- a/views/viewall.ejs
+++ b/views/viewall.ejs
@@ -28,9 +28,7 @@
         }
         .category{
             background-color: grey;
-            border: pink dotted
-
-
+            border: pink dotted;
         }
     </style>
 </head>
