--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+        <% include  partials/navbar%>
+
         <div class="edit">
     <%if(edit==="category"){%>
     <h4>Edit Category</h4>
