added date to transaction

--- a/views/bill.ejs
+++ b/views/bill.ejs
@@ -83,6 +83,7 @@
                     console.log(data.data)
                     if (data.data.success) {
                         // window.location="/bill/trans"
+                        alert("Bill genrated" )
                     }
                 })
             }
