--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -40,7 +40,7 @@
 <body>
         <% include  partials/navbar%>
 
-    <h1>Your Products List</h1>
+    <h1>Your Inventory</h1>
     <div class="view">
         <ul class="category">
             <%categories.map(c=>{%>
