--- a/views/transactionview.ejs
+++ b/views/transactionview.ejs
@@ -21,6 +21,8 @@
                 <th scope="col">#</th>
                 <th scope="col">ID</th>
                 <th scope="col">Price</th>
+                <th scope="col">Date</th>
+
             </tr>
         </thead>
         <tbody>
@@ -29,6 +31,7 @@
                         <th scope="row"><%=i+1%></th>
                         <td><%=d._id%></td>
                         <td><%=d.price%></td>
+                        <td><%=d.createdAt%></td>
                         <td><a href="/bill/trans/delete/<%=d._id%>">delete</a></td>
                       </tr>
                 
