added date to transaction

--- a/views/bill.ejs
+++ b/views/bill.ejs
@@ -98,6 +98,7 @@
                     if (data.data.success) {
                         // window.location="/bill/trans"
                         alert("Bill genrated" )
+                        window.location.reload()
                     }
                 })
             }
