--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -19,7 +19,12 @@
       <li class="nav-item active">
           <a class="nav-link" href="/bill/trans">Transactions <span class="sr-only">(current)</span></a>
         </li>
-        
+        <li class="nav-item active">
+          <a class="nav-link" href="/order/trans/0">Orders <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="/order/trans/1">Sold online <span class="sr-only">(current)</span></a>
+          </li>
 
     </ul>
 
