--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -25,7 +25,9 @@
         <li class="nav-item active">
             <a class="nav-link" href="/order/trans/1">Sold online <span class="sr-only">(current)</span></a>
           </li>
-
+          <li class="nav-item active">
+              <a class="nav-link" href="/order/trans/2">Cancel <span class="sr-only">(current)</span></a>
+            </li>
     </ul>
 
   </div>
