--- a/views/transactionview.ejs
+++ b/views/transactionview.ejs
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-        <% include  partials/navbar%>
+    <% include  partials/navbar%>
 
 
 
@@ -22,21 +22,75 @@
                 <th scope="col">ID</th>
                 <th scope="col">Price</th>
                 <th scope="col">Date</th>
+                <th scope="col">Action</th>
+
 
             </tr>
         </thead>
         <tbody>
             <%data.map((d,i)=>{%>
-                <tr>
-                        <th scope="row"><%=i+1%></th>
-                        <td><%=d._id%></td>
-                        <td><%=d.price%></td>
-                        <td><%=d.createdAt%></td>
-                        <td><a href="/bill/trans/delete/<%=d._id%>">delete</a></td>
-                      </tr>
-                
-                <%})%>
-             
+            <tr>
+                <th scope="row"><%=i+1%></th>
+                <td><%=d._id%></td>
+                <td><%=d.price%></td>
+                <td><%=d.createdAt%></td>
+                <td><a href="/bill/trans/delete/<%=d._id%>">delete</a></td>
+                <td>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#A<%=d._id%>">
+                        View
+                    </button>
+                    <div class="modal fade" id="A<%=d._id%>" tabindex="-1" role="dialog"
+                        aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">Details</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+
+                                    <table class="table">
+                                        <thead>
+                                            <tr>
+                                                <th scope="col">#</th>
+                                                <th scope="col">Name</th>
+                                                <th scope="col">Quantity</th>
+                                                <th scope="col">Rate</th>
+                                                <th scope="col">Price</th>
+
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <%d.products.map((p,i)=>{%>
+                                            <tr>
+                                                <td><%=i+1%></td>
+                                                <td><%=p.product.name%></td>
+                                                <td><%=p.quantity%></td>
+                                                <td><%=p.product.price%></td>
+                                                <td><%=p.product.price*p.quantity%></td>
+
+
+                                                <!-- <td><%=p.quantity%></td> -->
+                                            </tr>
+
+
+                                            <% })%>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+
+            <%})%>
+
         </tbody>
     </table>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
