--- a/views/ordersView.ejs
+++ b/views/ordersView.ejs
@@ -90,7 +90,7 @@
                 </td>
                 <%if(status==0){%>
 
-                <td> <button type="button" onclick="diliver('<%=d._id%>')" class="btn btn-secondary">Dilivered</button>
+                <td> <button type="button" onclick="diliver('<%=d._id%>')" class="btn btn-secondary">Delivered</button>
                 </td>
                 <td> <button type="button" onclick="cancel('<%=d._id%>')" class="btn btn-secondary">Cancel</button>
                 </td>
