--- a/views/bill.ejs
+++ b/views/bill.ejs
@@ -199,9 +199,24 @@
                     <%}%>
             </div> <% })%>
                 </div>
-
+                <div class="row">
+                    <div class="col col-md-6 clearfix"></div>
+                    <div class="col col-md-6">
+                        <center>
+                            <h3>Coustomer details</h3>
+                        </center>
+                            <ul>
+                                <li>Name:- Mr Urmilesh Tiwari</li>
+                                <li>Credits :- 50</li>
+                                <li>Age:- 30</li>
+                                <li>Reviews:- 3 stars</li>
+                            </ul>
+                        
+                    </div>
+                </div>
             </div>
         </div>
+   
 
 
 
