--- a/views/ordersView.ejs
+++ b/views/ordersView.ejs
@@ -78,6 +78,11 @@
                                             <% })%>
                                         </tbody>
                                     </table>
+                                    <ul>
+                                    <li>Name:- <%=d.cid.name%></li>
+                                    <li>phone:- <%=d.cid.phone%></li>
+                                    <li>address:- <%=d.cid.address%></li>
+                                </ul>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
