--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,15 +10,15 @@
       <li class="nav-item active">
         <a class="nav-link" href="/product/view">Products <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item active">
+      <!-- <li class="nav-item active">
         <a class="nav-link" href="/bill/make">Sale <span class="sr-only">(current)</span></a>
-      </li>
+      </li> -->
       <li class="nav-item active">
         <a class="nav-link" href="/inventory/view">Inventory <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item active">
+      <!-- <li class="nav-item active">
           <a class="nav-link" href="/bill/trans">Transactions <span class="sr-only">(current)</span></a>
-        </li>
+        </li> -->
         <li class="nav-item active">
           <a class="nav-link" href="/order/trans/0">Orders <span class="sr-only">(current)</span></a>
         </li>
